# Integers

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Integer.cpp  Integer.h  Rational.cpp  Rational.h  main.cpp
submission/: README.md
test/: IntegerTest.cpp  RationalTest.cpp
